fix: nav bar was not collapsing, updated nav items with collapse attribute to fix this on both index and login pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,10 +63,10 @@ html {
 	background-color: #fff !important;
 }
 
-.navsize {
+/* .navsize {
     padding-top: 100px;
     margin-top: -100px;
-}
+} */
 
 .dropdown-item {
 	color:#D05353;	
